; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wininet/extr_urlcache.c_urlcache_hash_entry_set_flags.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wininet/extr_urlcache.c_urlcache_hash_entry_set_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hash_entry = type { i32 }

@HASHTABLE_FLAG_BITS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hash_entry*, i32)* @urlcache_hash_entry_set_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @urlcache_hash_entry_set_flags(%struct.hash_entry* %0, i32 %1) #0 {
  %3 = alloca %struct.hash_entry*, align 8
  %4 = alloca i32, align 4
  store %struct.hash_entry* %0, %struct.hash_entry** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.hash_entry*, %struct.hash_entry** %3, align 8
  %6 = getelementptr inbounds %struct.hash_entry, %struct.hash_entry* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @HASHTABLE_FLAG_BITS, align 4
  %9 = ashr i32 %7, %8
  %10 = load i32, i32* @HASHTABLE_FLAG_BITS, align 4
  %11 = shl i32 %9, %10
  %12 = load i32, i32* %4, align 4
  %13 = or i32 %11, %12
  %14 = load %struct.hash_entry*, %struct.hash_entry** %3, align 8
  %15 = getelementptr inbounds %struct.hash_entry, %struct.hash_entry* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
